fix overflow of large outputs effecitng editor (#352)

--- a/frontend/src/components/editor/output/Outputs.css
+++ b/frontend/src/components/editor/output/Outputs.css
@@ -17,6 +17,10 @@
   @apply text-link;
 }
 
+.output {
+  position: relative;
+}
+
 .output > * {
   max-width: 100%;
 }
